<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_50"
    tools:context=".fragments.MessageFragment">

    <LinearLayout
        android:id="@+id/message_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_24"
        android:paddingTop="@dimen/space_20"
        android:paddingEnd="@dimen/space_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Text.SMD.DisplaySemibold18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_message" />

        <TextView
            style="@style/Text.SMD.Regular14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            android:text="@string/messages_subtitle" />

        <TextView
            android:id="@+id/text_message_section_hint"
            style="@style/Text.SMD.Regular12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:textColor="@color/neutral_500"
            android:text="@string/messages_list_hint" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:paddingStart="@dimen/space_24"
        android:paddingTop="@dimen/space_8"
        android:paddingEnd="@dimen/space_24"
        android:paddingBottom="@dimen/space_88"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_header"
        tools:itemCount="4"
        tools:listitem="@layout/item_conversation" />

    <TextView
        android:id="@+id/text_message_empty"
        style="@style/Text.SMD.Regular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages_empty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_header" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_new_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_24"
        android:layout_marginBottom="@dimen/space_88"
        android:contentDescription="@string/messages_new_chat"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/primary_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
